feat: add regen doc command and all flows associated, closes https://github.com/LedgerHQ/ledger-live-issues/issues/78

--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -208,8 +208,7 @@ jobs:
     if: always() && !cancelled() && github.event_name == 'workflow_dispatch' && github.event.inputs.sha != ''
     steps:
       - uses: actions/github-script@v6
-        name: Get statuses of runs
-        id: status
+        name: build summary
         with:
           script: |
             const fs = require("fs");
