--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,7 +83,6 @@ jobs:
         run: |
           echo "diff=$(git diff --exit-code || 1)" >> $GITHUB_OUTPUT
 
-  # TODO: SUMMARY OF LIBRARIES TO FINISH WITH ORCHESTRATOR
   test-libraries:
     name: "Test Libraries"
     env:
@@ -130,13 +129,9 @@ jobs:
           cleanup-cache-folder: "true"
       - name: Install dependencies
         run: pnpm i --filter="!./apps/**"
-      - name: Build and Test affected libraries (Pull Request)
-        if: ${{ github.event_name != 'push' }}
-        run: pnpm run test --continue --filter="!./apps/**" --filter="!live-common-tools" --filter="!ledger-live...[origin/${{ github.event.inputs.since_branch }}]" --api="http://127.0.0.1:${{ steps.turborepo-cache-server.outputs.port }}" --token="yolo" --team="foo"
-        shell: bash
-      - name: Build and Test affected libraries (Pull Request)
-        if: ${{ github.event_name == 'push' }}
-        run: pnpm run test --continue --filter="!./apps/**" --filter="!live-common-tools" --filter="!ledger-live...[HEAD^1]" --api="http://127.0.0.1:${{ steps.turborepo-cache-server.outputs.port }}" --token="yolo" --team="foo"
+      - name: Build and Test affected libraries
+        id: test-libs
+        run: pnpm run test --continue --filter="!./apps/**" --filter="!live-common-tools" --filter="!ledger-live...[${{ github.event.inputs.since_branch && format('origin/{0}', github.event.inputs.since_branch) || 'HEAD^1' }}]" --api="http://127.0.0.1:${{ steps.turborepo-cache-server.outputs.port }}" --token="yolo" --team="foo"
         shell: bash
       - name: (On Failure) Upload live-common snapshots and source
         uses: actions/upload-artifact@v3
@@ -157,18 +152,32 @@ jobs:
         run: npx codecov -F test
         env:
           CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
+      - uses: actions/github-script@v6
+        with:
+          script: |
+            const fs = require("fs");
+            fs.writeFileSync("summary-${{ matrix.os }}.txt", "${{ steps.test-libs.outcome }}", "utf-8");
+      - uses: actions/upload-artifact@v3
+        with:
+          name: outputs
+          path: ${{ github.workspace }}/summary-${{ matrix.os }}.txt
 
-  # TODO: ADD REPORT OF LIBRARIES (EXAMPLE IN TEST DESKTOP FOR MATRIX)
   report:
     needs: [test-cli, test-docs, test-libraries]
     if: always() && !cancelled() && github.event_name == 'workflow_dispatch' && github.event.inputs.sha != ''
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: outputs
       - uses: actions/github-script@v6
         name: build summary
         with:
           script: |
             const fs = require("fs");
+            const resultLinux = fs.readFileSync("${{ github.workspace }}/summary-ubuntu-latest.txt", "utf-8");
+            const resultMacos = fs.readFileSync("${{ github.workspace }}/summary-macos-latest.txt", "utf-8");
+
             const statuses = {
               doc: {
                 pass: ${{ needs.test-docs.outputs.fail != '1' }},
@@ -181,8 +190,20 @@ jobs:
               libraries: {
                 pass: ${{ needs.test-libraries.result == 'success' }},
                 status: "${{ needs.test-libraries.result }}",
+              },
+              libs: {
+                mac: {
+                  pass: resultMacos == 'success',
+                  status: resultMacos,
+                },
+                linux: {
+                  pass: resultLinux == 'success',
+                  status: resultLinux,
+                }
               }
             };
+
+            const libsOk = Object.values(statuses.libs).every(os => os.pass);
 
             const summary = `### Test documentation files
             ${statuses.doc.pass ? "Documentation files are fine" : "Documentation files are outdated"}
@@ -191,6 +212,14 @@ jobs:
             ### Test CLI
             ${statuses.cli.pass ? "CLI tests are successful" : "CLI tests did not end successfully"}
               - ${statuses.cli.pass ? "✅" : "❌"} **CLI tests** ended with status \`${statuses.cli.status}\`
+
+            ### Test Libraries
+            ${libsOk ? "All tests are fine" : "Some tests failed"}
+
+            | Linux (🤖) | macOS (🍏) |
+            | :--: | :--: |
+            | ${statuses.libs.linux.pass ? "✅" : "❌"} (${statuses.libs.linux.status}) | ${statuses.libs.mac.pass ? "✅" : "❌"} (${statuses.libs.mac.status}) |
+
             `;
 
             const actions = [];
