--- a/.github/workflows/build-desktop-external.yml
+++ b/.github/workflows/build-desktop-external.yml
@@ -120,20 +120,37 @@ jobs:
         with:
           script: |
             const fs = require("fs");
+
+            const [ owner, repo ] = "${{ github.repository }}".split("/");
+
+            const jobs = await github.paginate(github.rest.actions.listJobsForWorkflowRunAttempt, {
+              owner,
+              repo,
+              run_id: "${{ github.run_id }}",
+              attempt_number: "${{ github.run_attempt }}",
+            });
+
+            const findJobUrl = os =>
+              jobs.find(job => job.name == `Build Ledger Live Desktop (${os})`)?.html_url;
+
             const keys = {
               mac: {
                 symbol: "🍏",
-                name: "macOS"
+                name: "macOS",
+                jobUrl: findJobUrl("macos-latest")
               },
               windows: {
                 symbol: "🪟",
-                name: "Windows"
+                name: "Windows",
+                jobUrl: findJobUrl("windows-latest")
               },
               linux: {
                 symbol: "🐧",
-                name: "Linux"
+                name: "Linux",
+                jobUrl: findJobUrl("ubuntu-latest")
               },
             };
+
             const report = {
               mac: {
                 pass: ${{ needs.build-desktop-app.outputs.mac == 'success' }},
@@ -156,7 +173,7 @@ jobs:
             const reportKeys = Object.keys(report);
 
             reportKeys.forEach((k) => {
-              summary += ` ${keys[k].symbol} ${keys[k].name} |`;
+              summary += ` [${keys[k].symbol} ${keys[k].name}](${keys[k].jobUrl}) |`;
             });
 
             summary += `
