--- a/.github/workflows/build-mobile.yml
+++ b/.github/workflows/build-mobile.yml
@@ -184,16 +184,32 @@ jobs:
               "${{ needs.build-mobile-app-android.result }}",
               "${{ needs.build-mobile-app-ios.result }}",
             ];
+
+            const [ owner, repo ] = "${{ github.repository }}".split("/");
+
+            const jobs = await github.paginate(github.rest.actions.listJobsForWorkflowRunAttempt, {
+              owner,
+              repo,
+              run_id: "${{ github.run_id }}",
+              attempt_number: "${{ github.run_attempt }}",
+            });
+
+            const findJobUrl = os =>
+              jobs.find(job => job.name == `Build Ledger Live Mobile (${os})`)?.html_url;
+
             const keys = {
               ios: {
                 symbol: "🍏",
-                name: "iOS"
+                name: "iOS",
+                jobUrl: findJobUrl("Mac OS X")
               },
               android: {
                 symbol: "🤖",
-                name: "Android"
+                name: "Android",
+                jobUrl: findJobUrl("Android")
               },
             };
+
             const report = {
               android: {
                 pass: ${{ needs.build-mobile-app-android.result == 'success' }},
@@ -216,7 +232,7 @@ jobs:
             const reportKeys = Object.keys(report);
 
             reportKeys.forEach((k) => {
-              summary += ` ${keys[k].symbol} ${keys[k].name} |`;
+              summary += ` [${keys[k].symbol} ${keys[k].name}](${keys[k].jobUrl}) |`;
             });
 
             summary += `
