--- a/.github/workflows/build-mobile.yml
+++ b/.github/workflows/build-mobile.yml
@@ -1,5 +1,5 @@
 name: "@Mobile • Build App"
-run-name: "@${{ inputs.login }} triggered @Mobile • Build App ${{ format('on branch {0}', inputs.ref) }}"
+run-name: "@${{ github.event_name == 'workflow_dispatch' && inputs.login || github.actor }} triggered @Mobile • Build App ${{ github.event_name == 'workflow_dispatch' && format('on branch {0}', inputs.ref) || format('on ref {0}', github.ref) }}"
 
 on:
   push:
