--- a/.github/workflows/gate.yml
+++ b/.github/workflows/gate.yml
@@ -1,5 +1,5 @@
 name: "@PR • Gate"
-run-name: "@${{ github.actor }} triggered the @Gate ${{ format('on branch {0}', github.head_ref) }}"
+run-name: "@Gate triggered by @${{ github.actor }} ${{ format('on branch {0}', github.head_ref) }}"
 
 on:
   pull_request:
