--- a/.github/workflows/test-mobile.yml
+++ b/.github/workflows/test-mobile.yml
@@ -1,5 +1,5 @@
 name: "@Mobile • Test App"
-run-name: "@${{ github.event_name == 'workflow_dispatch' && inputs.login || github.actor }} triggered @Mobile • Test App ${{ github.event_name == 'workflow_dispatch' && format('on branch {0}', inputs.ref) || format('on ref {0}', github.ref) }}"
+run-name: "@Mobile • Test App triggered by @${{ github.event_name == 'workflow_dispatch' && inputs.login || github.actor }} ${{ github.event_name == 'workflow_dispatch' && format('on branch {0}', inputs.ref) || format('on ref {0}', github.ref) }}"
 
 on:
   push:
