ci(bot): fix all workflow_run references to the run branch/sha

--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
     inputs:
       ref:
-        description: The branch to lint
+        description: The commit/branch to lint
         required: true
       from:
         description: Lower end of the commit range to lint
