--- a/.github/workflows/test-desktop-external.yml
+++ b/.github/workflows/test-desktop-external.yml
@@ -1,5 +1,5 @@
 name: "@Desktop • Test App (external)"
-run-name: "@Desktop • Test App (external) triggered by @${{ inputs.login }} ${{ format('on branch {0}', inputs.ref) }}"
+run-name: "@Desktop • Test App (external) triggered by ${{ inputs.login }} ${{ format('on branch {0}', inputs.ref) }}"
 
 on:
   workflow_dispatch:
