--- a/.github/workflows/bot-transfer.yml
+++ b/.github/workflows/bot-transfer.yml
@@ -73,8 +73,8 @@ jobs:
           npm link
       - name: bot transfer
         env:
-          SEED: ${{ secrets[format('SEED{0}', github.event.inputs.origin)] }}
-          SEED_RECIPIENT: ${{ secrets[format('SEED{0}', github.event.inputs.recipient)] }}
+          SEED: ${{ secrets[format('SEED{0}', inputs.origin)] }}
+          SEED_RECIPIENT: ${{ secrets[format('SEED{0}', inputs.recipient)] }}
           VERBOSE_FILE: bot-transfer.txt
         run: COINAPPS=$PWD/coin-apps ledger-live botTransfer
         timeout-minutes: 120
