--- a/.github/workflows/generate-screenshots.yml
+++ b/.github/workflows/generate-screenshots.yml
@@ -18,8 +18,8 @@ on:
         required: false
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ github.ref_name != 'develop' }}
+  group: ${{ github.workflow }}-${{ inputs.ref || inputs.number }}
+  cancel-in-progress: true
 
 jobs:
   start-runner:
@@ -70,13 +70,13 @@ jobs:
           app_id: ${{ secrets.GH_BOT_APP_ID }}
           private_key: ${{ secrets.GH_BOT_PRIVATE_KEY }}
       - uses: actions/checkout@v3
-        if: ${{ github.event.inputs.ref != null }}
+        if: ${{ inputs.ref != null }}
         with:
-          ref: ${{ github.event.inputs.ref }}
+          ref: ${{ inputs.ref }}
           fetch-depth: 0
           token: ${{ steps.generate-token.outputs.token }}
       - uses: actions/checkout@v3
-        if: ${{ !github.event.inputs.ref }}
+        if: ${{ !inputs.ref }}
         with:
           fetch-depth: 0
           token: ${{ steps.generate-token.outputs.token }}
@@ -93,8 +93,8 @@ jobs:
           && sudo apt update \
           && sudo apt install gh -y
       - name: Checkout PR
-        if: ${{ github.event.inputs.number != null && github.event.inputs.ref == null }}
-        run: gh pr checkout ${{ github.event.inputs.number }}
+        if: ${{ inputs.number != null && inputs.ref == null }}
+        run: gh pr checkout ${{ inputs.number }}
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
       - name: set git user
@@ -128,21 +128,21 @@ jobs:
           app_id: ${{ secrets.GH_BOT_APP_ID }}
           private_key: ${{ secrets.GH_BOT_PRIVATE_KEY }}
       - uses: actions/checkout@v3
-        if: ${{ github.event.inputs.ref != null }}
+        if: ${{ inputs.ref != null }}
         with:
-          ref: ${{ github.event.inputs.ref }}
+          ref: ${{ inputs.ref }}
           fetch-depth: 0
           token: ${{ steps.generate-token.outputs.token }}
       - uses: actions/checkout@v3
-        if: ${{ !github.event.inputs.ref }}
+        if: ${{ !inputs.ref }}
         with:
           fetch-depth: 0
           token: ${{ steps.generate-token.outputs.token }}
       - uses: ./tools/actions/composites/setup-test-desktop
         id: setup-test-desktop
       - name: Checkout PR
-        if: ${{ github.event.inputs.number != null && github.event.inputs.ref == null }}
-        run: gh pr checkout ${{ github.event.inputs.number }}
+        if: ${{ inputs.number != null && inputs.ref == null }}
+        run: gh pr checkout ${{ inputs.number }}
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
       - name: set git user
@@ -175,12 +175,12 @@ jobs:
           app_id: ${{ secrets.GH_BOT_APP_ID }}
           private_key: ${{ secrets.GH_BOT_PRIVATE_KEY }}
       - uses: actions/checkout@v3
-        if: ${{ github.event.inputs.ref != null }}
+        if: ${{ inputs.ref != null }}
         with:
           fetch-depth: 0
           token: ${{ steps.generate-token.outputs.token }}
       - uses: actions/checkout@v3
-        if: ${{ !github.event.inputs.ref }}
+        if: ${{ !inputs.ref }}
         with:
           fetch-depth: 0
           token: ${{ steps.generate-token.outputs.token }}
@@ -190,8 +190,8 @@ jobs:
           skip_python: true
           skip_ruby: true
       - name: Checkout PR
-        if: ${{ github.event.inputs.number != null && github.event.inputs.ref == null }}
-        run: gh pr checkout ${{ github.event.inputs.number }}
+        if: ${{ inputs.number != null && inputs.ref == null }}
+        run: gh pr checkout ${{ inputs.number }}
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
       - name: set git user
@@ -213,7 +213,7 @@ jobs:
   report-start:
     name: Report start
     runs-on: ubuntu-latest
-    if: github.event.inputs.commentId != ''
+    if: inputs.commentId != ''
     steps:
       - name: generate token
         id: generate-token
@@ -229,16 +229,16 @@ jobs:
           retries: 3
           script: |
             const {repo: {owner, repo}, run_id} = context
-            const issue_number = ${{ github.event.inputs.number }}
+            const issue_number = ${{ inputs.number }}
             const body = `\
-            @${{ github.event.inputs.login }}
+            @${{ inputs.login }}
 
             [Generating screenshots: workflow started](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
             `
             await github.rest.issues.updateComment({
               owner,
               repo,
-              comment_id: "${{ github.event.inputs.commentId }}",
+              comment_id: "${{ inputs.commentId }}",
               body,
             });
 
@@ -281,7 +281,7 @@ jobs:
               .join("\n")
 
             const body = `\
-            @${{ github.event.inputs.login }}
+            @${{ inputs.login }}
 
             [Generating screenshots: workflow ended](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
 
@@ -295,11 +295,11 @@ jobs:
 
             fs.writeFileSync("summary.json", JSON.stringify(output), "utf-8");
 
-            if(${{ github.event.inputs.commentId != '' }}) {
+            if(${{ inputs.commentId != '' }}) {
               await github.rest.issues.updateComment({
                 owner,
                 repo,
-                comment_id: "${{ github.event.inputs.commentId }}",
+                comment_id: "${{ inputs.commentId }}",
                 body
               });
             }
