--- a/.github/workflows/regen-pods.yml
+++ b/.github/workflows/regen-pods.yml
@@ -18,8 +18,8 @@ on:
         required: false
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ github.ref_name != 'develop' }}
+  group: ${{ github.workflow }}-${{ inputs.ref || inputs.number }}
+  cancel-in-progress: true
 
 jobs:
   regen-pods:
@@ -35,17 +35,17 @@ jobs:
           app_id: ${{ secrets.GH_BOT_APP_ID }}
           private_key: ${{ secrets.GH_BOT_PRIVATE_KEY }}
       - uses: actions/checkout@v3
-        if: ${{ github.event.inputs.ref != null }}
+        if: ${{ inputs.ref != null }}
         with:
-          ref: ${{ github.event.inputs.ref }}
+          ref: ${{ inputs.ref }}
           token: ${{ steps.generate-token.outputs.token }}
       - uses: actions/checkout@v3
-        if: ${{ !github.event.inputs.ref }}
+        if: ${{ !inputs.ref }}
         with:
           token: ${{ steps.generate-token.outputs.token }}
       - name: Checkout PR
-        if: ${{ github.event.inputs.number != null }}
-        run: gh pr checkout ${{ github.event.inputs.number }}
+        if: ${{ inputs.number != null }}
+        run: gh pr checkout ${{ inputs.number }}
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
       - name: set git user
@@ -87,7 +87,7 @@ jobs:
           git pull --rebase &&
           git push
       - name: create summary (failure)
-        if: failure() && github.event.inputs.number != null
+        if: failure() && inputs.number != null
         uses: actions/github-script@v6
         with:
           github-token: ${{ steps.generate-token.outputs.token }}
@@ -95,10 +95,10 @@ jobs:
             const fs = require("fs");
             const body = `#### ❌ Podfile regeneration failed
 
-            @${{ github.event.inputs.login }}: you can check [the action logs](https://github.com/LedgerHQ/ledger-live/runs/${{ github.run_id }}) for more information.`;
+            @${{ inputs.login }}: you can check [the action logs](https://github.com/LedgerHQ/ledger-live/runs/${{ github.run_id }}) for more information.`;
             fs.writeFileSync("summary.txt", body, "utf8");
       - name: create summary (success)
-        if: github.event.inputs.number != null && steps.check-status.outputs.status != 0
+        if: inputs.number != null && steps.check-status.outputs.status != 0
         uses: actions/github-script@v6
         with:
           github-token: ${{ steps.generate-token.outputs.token }}
@@ -106,10 +106,10 @@ jobs:
             const fs = require("fs");
             const body = `#### 🚀 Podfile regenerated
 
-            @${{ github.event.inputs.login }}: the podfile has been regenerated and a commit has been pushed to your branch.`;
+            @${{ inputs.login }}: the podfile has been regenerated and a commit has been pushed to your branch.`;
             fs.writeFileSync("summary.txt", body, "utf8");
       - name: create summary (no change)
-        if: github.event.inputs.number != null && steps.check-status.outputs.status == 0
+        if: inputs.number != null && steps.check-status.outputs.status == 0
         uses: actions/github-script@v6
         with:
           github-token: ${{ steps.generate-token.outputs.token }}
@@ -117,7 +117,7 @@ jobs:
             const fs = require("fs");
             const body = `#### ✨ No changes detected
 
-            @${{ github.event.inputs.login }}: the podfile is already up to date.`;
+            @${{ inputs.login }}: the podfile is already up to date.`;
             fs.writeFileSync("summary.txt", body, "utf8");
       - uses: actions/upload-artifact@v3
         if: always()
@@ -129,7 +129,7 @@ jobs:
   report-start:
     name: Report start
     runs-on: ubuntu-latest
-    if: github.event.inputs.commentId != ''
+    if: inputs.commentId != ''
     steps:
       - name: generate token
         id: generate-token
@@ -145,9 +145,9 @@ jobs:
           retries: 3
           script: |
             const {repo: {owner, repo}, run_id} = context
-            const issue_number = ${{ github.event.inputs.number }}
+            const issue_number = ${{ inputs.number }}
             const body = `\
-            @${{ github.event.inputs.login }}: triggered \`/regen-pods\`
+            @${{ inputs.login }}: triggered \`/regen-pods\`
 
             [Regenerating Pods: workflow started](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
             `;
@@ -155,7 +155,7 @@ jobs:
             await github.rest.issues.updateComment({
               owner,
               repo,
-              comment_id: "${{ github.event.inputs.commentId }}",
+              comment_id: "${{ inputs.commentId }}",
               body,
             });
 
@@ -198,11 +198,11 @@ jobs:
 
             fs.writeFileSync("summary.json", JSON.stringify(output), "utf-8");
 
-            if(${{ github.event.inputs.commentId != '' }}) {
+            if(${{ inputs.commentId != '' }}) {
               await github.rest.issues.updateComment({
                 owner,
                 repo,
-                comment_id: "${{ github.event.inputs.commentId }}",
+                comment_id: "${{ inputs.commentId }}",
                 body
               });
             }
