--- a/.github/workflows/release-prerelease.yml
+++ b/.github/workflows/release-prerelease.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v3
         if: ${{ github.event_name == 'workflow_dispatch' }}
         with:
-          ref: ${{ github.event.inputs.ref }}
+          ref: ${{ inputs.ref }}
           token: ${{ secrets.GH_PAT }}
 
       - name: set git user
@@ -95,11 +95,11 @@ jobs:
           git add . &&
           git commit -m ":fire: hotfix prerelease [${{ env.LLD }}, ${{ env.LLM }}]" ||
           echo ""
-      - name: commit (from ${{ github.event.inputs.ref }} branch) workflow dispatch
+      - name: commit (from ${{ inputs.ref }} branch) workflow dispatch
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
           git add .
-          git commit -m ":rocket: ${{ github.event.inputs.ref }} prerelease [LLD(${{ steps.post-desktop-version.outputs.version }}), LLM(${{ steps.post-mobile-version.outputs.version }})]" ||
+          git commit -m ":rocket: ${{ inputs.ref }} prerelease [LLD(${{ steps.post-desktop-version.outputs.version }}), LLM(${{ steps.post-mobile-version.outputs.version }})]" ||
           echo ""
       - name: publish prerelease
         run: pnpm changeset publish
@@ -122,7 +122,7 @@ jobs:
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
           git pull --rebase
-          git push origin ${{ github.event.inputs.ref }} --follow-tags
+          git push origin ${{ inputs.ref }} --follow-tags
       - uses: actions/github-script@v6
         name: trigger prerelease build for desktop
         if: ${{ steps.desktop-version.outputs.version != steps.post-desktop-version.outputs.version }}
@@ -135,7 +135,7 @@ jobs:
               ref: "main",
               workflow_id: "pre-desktop.yml",
               inputs: {
-                ref: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.ref || github.ref_name }}",
+                ref: "${{ github.event_name == 'workflow_dispatch' && inputs.ref || github.ref_name }}",
               }
             });
       - uses: actions/github-script@v6
@@ -150,6 +150,6 @@ jobs:
               ref: "main",
               workflow_id: "pre-mobile.yml",
               inputs: {
-                ref: "${{ github.event_name == 'workflow_dispatch' && github.event.inputs.ref || github.ref_name }}",
+                ref: "${{ github.event_name == 'workflow_dispatch' && inputs.ref || github.ref_name }}",
               }
             });
