--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -228,6 +228,7 @@
     "lru-cache": "5.1.1",
     "minimatch": "^5.1.0",
     "near-api-js": "^0.44.2",
+    "node-fetch": "^3.3.0",
     "numeral": "^2.0.6",
     "object-hash": "^2.2.0",
     "pako": "^2.0.4",
@@ -255,6 +256,7 @@
     "utility-types": "^3.10.0",
     "varuint-bitcoin": "1.1.2",
     "winston": "^3.4.0",
+    "wretch": "^2.3.2",
     "xstate": "^4.30.2",
     "zcash-bitcore-lib": "^0.13.20-rc3"
   },
