:rocket: bugfix/1719 prerelease [LLD(2.52.0-no-git.0), LLM(3.13.0)]

--- a/tools/common-tools/package.json
+++ b/tools/common-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "live-common-tools",
-  "version": "0.2.20",
+  "version": "0.2.21-no-git.0",
   "private": true,
   "dependencies": {
     "@ledgerhq/cryptoassets": "workspace:^",
