--- a/.github/workflows/notify-prerelease-translations.yml
+++ b/.github/workflows/notify-prerelease-translations.yml
@@ -26,7 +26,7 @@ jobs:
       - name: checkout PR
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
-          gh pr checkout ${{ github.event.inputs.prNumber }}
+          gh pr checkout ${{ inputs.prNumber }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -37,7 +37,7 @@ jobs:
         with:
           script: |
             const fs = require("fs");
-            const text = "Translations files have changed on ${{ github.event.inputs.prNumber || github.event.push.head.ref || github.event.pull_request.number }}";
+            const text = "Translations files have changed on ${{ inputs.prNumber || github.event.push.head.ref || github.event.pull_request.number }}";
             const output = {
               text,
               blocks: [
@@ -57,7 +57,7 @@ jobs:
                   "text": {
                     "type": "mrkdwn",
                     "text": `Please make sure all languages are provided before the release.
-              You can see more informations on the <https://github.com/LedgerHQ/ledger-live/pull/${{ github.event.inputs.prNumber || github.event.pull_request.number }}|Pull Request>
+              You can see more informations on the <https://github.com/LedgerHQ/ledger-live/pull/${{ inputs.prNumber || github.event.pull_request.number }}|Pull Request>
                     `
                   }
                 }
